fix report image alignment

--- a/src/app/modules/inspections/components/inspection-report-failures/inspection-report-failures.component.scss
+++ b/src/app/modules/inspections/components/inspection-report-failures/inspection-report-failures.component.scss
@@ -46,8 +46,8 @@ img {
       width: 205px;
     }
     &:nth-child(3) {
-      min-width: 350px;
-      width: 350px;
+      min-width: 470px;
+      width: 470px;
     }
     &:last-child {
       min-width: 100%;
